# OpenGL

./: .gitignore  CMakeLists.txt
shaders/: default.frag  default.vert  light.frag  light.vert
src/: camera.cpp  camera.hpp  ebo.cpp  ebo.hpp  main.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
src/engine/graphics/: camera.cpp  camera.hpp  light.cpp  light.hpp  lightmanager.cpp  lightmanager.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/engine/graphics/buffers/: ebo.cpp  ebo.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp
